required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version:
----------------

- Disabled some insecure (and potentially exploitable) mapserv command-line
  debug arguments (#3485). The --enable-cgi-cl-debug-args configure switch
  can be used to re-enable them for devs who really cannot get away without
  them and who understand the potential security risk (not recommended for 
  production servers or those who don't understand the security implications).

- Fixed possible buffer overflow in msTmpFile() (#3484)

- fix blending of transparent layers with AGG on MSB archs (#3471)

- Fix security exception issue in C# with MSVC2010 (#3438)

- Check error returns from mapstring functions (#2988)

- Avoid memory error when building SQL bbox (#3324)

- Determine PgSQL version in a more backwards compatible way (#3291)

- Fixed use of minfeaturesize auto with curved labels (#3151)

- Useful error message for case where PK is missing and data is 
  subselect (#3124)

- Fixed WCS processing when both crs and response_crs are specified (#3083)

- Fixed msFreeMap causing memory corruption in msFreeOutputFormat (#3113)

- Fix WMC XML output when Dimension is used (#3110)

- Fix output for valid WCS 1.1 XML (#3086)

- Avoid double free with postgresql joins. (#2936)

- Fixed msMSSQL2008LayerGetShape to retrieve proper wkb geometries (#3082)

- Fixed the shape index for the inline layers (#3074)

- Fixed build issue with PHP_REGEX_INC in mapscript/php3/Makefile.in (#3078)

Version 5.4.2 (2009-07-23):
---------------------------

- Fixed PHP/Mapscript to support PHP 5.3 (#3065, #3066)

- New fix for incomplete CVE-2009-0840 security fix made in 5.4.0 (#2943)

- Add centroid geomtransform (#2825)
